# puzzlechain

./: .gitignore  1_generate_prompts_and_solutions.py  2_evaluate_solutions.py  3_analyze.py  README.md  config.py  main.py  pyproject.toml  results.csv
solutions/: solution_URGENT_1.py  solution_URGENT_10.py  solution_URGENT_100.py  solution_URGENT_11.py  solution_URGENT_12.py  solution_URGENT_13.py  solution_URGENT_14.py  solution_URGENT_15.py  solution_URGENT_16.py  solution_URGENT_17.py  solution_URGENT_18.py  solution_URGENT_19.py  solution_URGENT_2.py  solution_URGENT_20.py  solution_URGENT_21.py  solution_URGENT_22.py  solution_URGENT_23.py  solution_URGENT_24.py  solution_URGENT_25.py  solution_URGENT_26.py  solution_URGENT_27.py  solution_URGENT_28.py  solution_URGENT_29.py  solution_URGENT_3.py  solution_URGENT_30.py  solution_URGENT_31.py  solution_URGENT_32.py  solution_URGENT_33.py  solution_URGENT_34.py  solution_URGENT_35.py  solution_URGENT_36.py  solution_URGENT_37.py  solution_URGENT_38.py  solution_URGENT_39.py  solution_URGENT_4.py  solution_URGENT_40.py  solution_URGENT_41.py  solution_URGENT_42.py  solution_URGENT_43.py  solution_URGENT_44.py  (+360 more)
