[tool.poetry]
name = "codechain"
version = "0.1.0"
description = ""
authors = ["Eugene Tsuprun"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.13"
langchain-openai = "^0.2.14"
python-dotenv = "^1.0.1"
langchain-core = "^0.3.28"
langchain = "^0.3.13"
scipy = "^1.14.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
